dowload_upload_scalability_test-set

--- a/.github/workflows/scalability.yml
+++ b/.github/workflows/scalability.yml
@@ -60,6 +60,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: scalability-testset
+          path: scalability/input/
 
       - name: Run FAST - scalability
         id: FAST-scalability
